[tool.poetry]
name = "recipealchemy"
version = "0.1.0"
description = ""
authors = ["Joe <jessex7@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
